--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/drei": "^9.102.6",
     "@react-three/fiber": "^8.16.0",
     "@sentry/react": "^8.0.0",
+    "@sentry/vite-plugin": "^2.16.1",
     "gsap": "^3.12.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
